hover new menu with css not bootstrap, added invite and project js files (not started) to interact with the links generated to add pop-up modals, starting working on fixing bugs

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -40,4 +40,18 @@
   </div>
 </div>
 
+{{!-- CONNECT THIS AND AN ERROR --}}
+<!-- Result Notification for successful sign up -->
+  <div class="container">
+  <div class="row justify-content-center">
+    <div
+      id="resultNotification"
+      class="notification hide animate__animated animate__fadeIn text-center"
+    >
+      <i class="fas fa-check" style="color: #ffffff;"></i>
+      Successfully logged in!
+    </div>
+  </div>
+</div>
+
 <script src="/js/login.js"></script>
