--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -242,7 +242,7 @@
       class="notification hide animate__animated animate__fadeIn text-center"
     >
       <i class="fa-regular fa-circle-xmark" style="color: #c43434;"></i>
-      Your workspace code is invalid, make sure it is 4 characters
+      Your workspace code is invalid
     </div>
   </div>
 </div>
