--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -6,11 +6,42 @@
       id="navbarNavDropdown"
     >
       <button
-        class="nav-link text-white btn btn-outline-light mx-4"
-        id="logout"
+        class="nav-link text-white btn btn-outline-light logout-button mx-4"
+        id="logout-button"
         type="submit"
       >Logout</button>
-      <ul class="navbar-nav">
+      <div class="dropdown">
+        <button class="dropbtn text-white btn btn-outline-light px-2 py-2"><i
+            class="fa-regular fa-square-plus"
+            style="color: #ffffff;"
+          ></i>
+          New
+          <i
+            class="fa-solid fa-caret-down"
+            style="color: #ffffff;"
+          ></i></button>
+        <div class="dropdown-content">
+          <a href="#"><i
+              class="fa-solid fa-list-check"
+              style="color: #000000;"
+            ></i>
+            Project</a>
+          <a href="#"><i
+              class="fa-regular fa-paper-plane"
+              style="color: #000000;"
+            ></i>
+            Invite</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
+
+<script src="/js/logout.js"></script>
+<script src="/js/invite.js"></script>
+<script src="/js/project.js"></script>
+
+{{! <ul class="navbar-nav">
 
         <li class="nav-item dropdown">
           <a
@@ -28,10 +59,7 @@
             <li><a class="dropdown-item" href="#">Invite New Member</a></li>
           </ul>
         </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+      </ul> }}
 
 {{! <nav class="navbar navbar-expand-lg navbar-light">
   <button
@@ -62,5 +90,40 @@
       />
       <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
+  </div>
+</nav> }}
+
+{{! <nav class="navbar bg-body-tertiary bg-transparent mb-3">
+  <div class="container-fluid">
+
+    <div
+      class="collapse navbar-collapse d-flex flex-row-reverse"
+      id="navbarNavDropdown"
+    >
+      <button
+        class="nav-link text-white btn btn-outline-light mx-4"
+        id="logout"
+        type="submit"
+      >Logout</button>
+      <ul class="navbar-nav">
+
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle text-white btn btn-outline-light px-2"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          ><i class="fa-regular fa-square-plus" style="color: #ffffff;"></i>
+            New
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Add Project</a></li>
+            <li><hr class="dropdown-divider" /></li>
+            <li><a class="dropdown-item" href="#">Invite New Member</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav> }}
