unique email and username bug fixed

--- a/views/invite.handlebars
+++ b/views/invite.handlebars
@@ -1,13 +1,34 @@
-<div>
-  <button type="button" id="add-btn" class="btn">Add A User</button>
-  <form id="invite-form">
-    <div id="email-container">
-      <input type="hidden" id="join_code" value="{{workspace.join_code}}" />
-      <input type="email" class="email" placeholder="Enter email" />
+<!-- Send Invites -->
+  <div class="row justify-content-center hide" id="workplace-create">
+    <div class="col-md-6 mt-5">
+      <h1 class="text-center mb-4">Welcome to {Workspace Name}!</h1>
+      <h3 class="text-center mb-4">Would you like to send out invites?</h3>
+      <h4 class="text-center">(Or you can save the code to be used later)</h4>
+      <form id="workspaceForm">
+        <div class="form-row justify-content-center">
+          <div class="form-group col-md-6">
+            
+            <div class="alert alert-dark text-center" id="code-success" role="alert">
+              {{!-- PROPERLY CONNECT TO ROUTE --}}
+              Code Successfully Generated: {{workspace.join_code}}
+            </div>
+            <div>
+              <button type="button" id="add-btn" class="btn">Add A User</button>
+              <form id="invite-form">
+                <div id="email-container">
+                  <input type="hidden" id="join_code" value="{{workspace.join_code}}" />
+                  <input type="email" class="email" placeholder="Enter email" />
+                </div>
+                <button type="submit" id="submit-btn">Submit All Invites</button>
+              </form>
+            </div>
+          <button
+              type="submit"
+              class="btn btn-outline-light btn-block hide"
+              id="enter-workspace"
+            >Enter Workspace</button>
     </div>
-    <button type="submit" id="submit-btn">Submit All Invites</button>
-  </form>
-
-</div>
+  </div>
 
 <script src="/js/invite.js"></script>
+<script src="/js/signup.js"></script>
