--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -12,8 +12,8 @@
 <div class="container">
   <div class="row head">
     <div class="col text-center mt-5">
-      <h1>WELCOME TO ELEVATE</h1>
-      <h2 id="welcome-sub">Enhanced company management software.</h2>
+      <h1 class="text-white">WELCOME TO ELEVATE</h1>
+      <h2 class="text-white" id="welcome-sub">Enhanced company management software.</h2>
     </div>
   </div>
 </div>
