--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,24 +13,26 @@
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="login-container mt-5">
-        <h2 class="text-center mb-4">Login</h2>
+        <h2 class="text-center text-white mb-4">Login</h2>
         <form id="login-form" class="mt-5">
           <div class="form-group">
-            <label for="email-login">Email</label>
+            <label for="email-login" class="text-white">Email</label>
             <input
               type="email"
               class="form-control"
               id="email-login"
               placeholder="Enter email"
+              required
             />
           </div>
           <div class="form-group">
-            <label for="password-login">Password</label>
+            <label for="password-login" class="text-white">Password</label>
             <input
               type="password"
               class="form-control"
               id="password-login"
               placeholder="Enter Password"
+              required
             />
           </div>
           <button type="submit" class="btn btn-outline-light btn-block">Login</button>
@@ -46,7 +48,7 @@
   <div class="row justify-content-center">
     <div
       id="resultNotification"
-      class="notification hide animate__animated animate__fadeIn text-center"
+      class="notification hide animate__animated animate__fadeIn text-center text-white"
     >
       <i class="fas fa-check" style="color: #ffffff;"></i>
       Successfully logged in!
