redirects to home page upon login and has notifications if incorrect email/password or successful

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -47,11 +47,24 @@
   <div class="container">
   <div class="row justify-content-center">
     <div
-      id="resultNotification"
+      id="successfulLogin"
       class="notification hide animate__animated animate__fadeIn text-center text-white"
     >
       <i class="fas fa-check" style="color: #ffffff;"></i>
       Successfully logged in!
+    </div>
+  </div>
+</div>
+
+<!-- Result Notification for an unmatched password -->
+  <div class="container">
+  <div class="row justify-content-center">
+    <div
+      id="unsuccessfulLogin"
+      class="notification hide animate__animated animate__fadeIn text-center text-red"
+    >
+      <i class="fa-regular fa-circle-xmark" style="color: #c43434;"></i>
+       Incorrect email and/or password
     </div>
   </div>
 </div>
