users who login/signup are directed to their indivdual workspaces, rendered in the homeroutes by checking the data saved into the session

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -16,7 +16,7 @@
                 <div class="card">
                   <div class="card-header">
                     <h5 class="card-title"><i class="fa-regular fa-circle-down" style="color: #e45656;"></i> To Do</h5>
-                        <p class="card-subtitle">This item hasn't been started</p>
+                        <p class="card-subtitle">This item hasn't been started: {{workspace.name}}</p>
                   </div>
                   <div class="card-body" style="max-height: 600px; overflow-y: auto">
                       <!-- Nested Child Card -->
