--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -28,7 +28,7 @@
               style="color: #000000;"
             ></i>
             Project</a>
-          <a href="#"><i
+          <a href="/invite"><i
               class="fa-regular fa-paper-plane"
               style="color: #000000;"
             ></i>
