--- a/views/partials/sidebar.handlebars
+++ b/views/partials/sidebar.handlebars
@@ -10,20 +10,20 @@
     /></a>
 
   <ul class="nav nav-pills flex-column mb-auto">
-    <li class="nav-item">
+    {{! <li class="nav-item">
       <a href="#Home" class="nav-link text-white" aria-current="page">
         <svg class="bi me-2" width="16" height="16"><use
             xlink:href="#home"
           ></use></svg>
         Home
       </a>
-    </li>
+    </li> }}
     <li>
-      <a href="#Groups" class="nav-link text-white">
+      <a href="#Users" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="16"><use
             xlink:href="#speedometer2"
           ></use></svg>
-        Groups
+        Users
       </a>
     </li>
     <li>
@@ -36,7 +36,7 @@
     </li>
   </ul>
 
-  <div class="container-fluid">
+  {{! <div class="container-fluid">
     <form class="d-flex" role="search">
       <input
         class="form-control me-2"
@@ -46,7 +46,7 @@
       />
       <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
-  </div>
+  </div> }}
 
 </aside>
 
