--- a/views/partials/task.handlebars
+++ b/views/partials/task.handlebars
@@ -1,5 +1,5 @@
 <!-- Nested Child Card -->
-<div class="card mb-2">
+<div class="card mb-2" data-id="{{id}}">
   <div class="card-body">
     <h5 class="card-title">
       <a href="#" onclick="openTaskCardModal({{id}})" class="card-link">{{title}}</a>
