--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -20,7 +20,7 @@
                   </div>
                   <div class="card-body" style="max-height: 500px; overflow-y: auto">
                       <!-- Nested Child Card -->
-                      <ul>
+                      <ul id="to-do-task">
                         {{#each tasks.toDo as |task|}}
                         <li> {{> task task}} </li>
                         {{/each}}
@@ -43,7 +43,7 @@
                   </div>
                   <div class="card-body" style="max-height: 500px; overflow-y: auto">
                       <!-- Nested Child Card -->
-                      <ul>
+                      <ul id="in-progress-task">
                         {{#each tasks.inProgress as |task|}}
                         <li> {{> task task}} </li>
                         {{/each}}
@@ -66,7 +66,7 @@
                   </div>
                   <div class="card-body" style="max-height: 500px; overflow-y: auto">
                       <!-- Nested Child Card -->
-                      <ul>
+                      <ul id="completed-task">
                         {{#each tasks.completed as |task|}}
                         <li> {{> task task}} </li>
                         {{/each}}
