successful and invalid join code alerts now present and doesnt error out

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,9 +82,9 @@ p {
     transform: translateY(100%);
 }
    */
-/* .hide {
+.hide {
     display: none;
-} */
+}
 
 /* Sidebar link hover styling */
 aside .nav-pills .nav-link:hover {
