--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -247,6 +247,20 @@
   </div>
 </div>
 
+
+  <!-- Result Notification for successful joincode -->
+  <div class="container">
+  <div class="row justify-content-center">
+    <div
+      id="successfulJoin"
+      class="notification hide animate__animated animate__fadeIn text-center text-white"
+    >
+      <i class="fas fa-check" style="color: #ffffff;"></i>
+       Successfully joined workspace!
+    </div>
+  </div>
+</div>
+
 </div>
 
 <script src="/js/signup.js"></script>
