creating workspace directs to /invite and added mock favicon

--- a/views/partials/sidebar.handlebars
+++ b/views/partials/sidebar.handlebars
@@ -3,11 +3,15 @@
   style="width: 280px"
 >
 
-  <a class="navbar-brand" href="#Home"><img
+  <a class="navbar-brand ml-3 mb-2" href="#Home"><img
       src="/images/Logo.png"
       width="200"
       alt="Logo"
     /></a>
+
+  <h4 class="text-center text-white">Welcome,</h3>
+  {{! Add in once route has been added }}
+  <p class="text-center text-white">Add User First Last here</p>
 
   <ul class="nav nav-pills flex-column mb-auto">
     {{! <li class="nav-item">
