--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,6 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Wix+Madefor+Display:wght@400..800&family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png" />
     <script
       src="https://kit.fontawesome.com/b280342818.js"
       crossorigin="anonymous"
