--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,96 +1,102 @@
 {{! Will need to add sortable.Js to main.handlebars }}
+
 <body>
   <div class="container-fluid">
     <!-- Sidebar -->
     <div class="sidebar">
-        {{> sidebar}}
+      {{> sidebar}}
     </div>
     <!-- Page content -->
     <div class="content">
       {{> navbar }}
-        <div class="container">
-          <div class="row" id="task-board">
-            <div class="col" id="to-do">
-              {{!-- Parent Card --}}
-              <div class="container">
-                <div class="card">
-                  <div class="card-header">
-                    <h5 class="card-title"><i class="fa-regular fa-circle-down" style="color: #e45656;"></i> To Do</h5>
-                        <p class="card-subtitle">This item hasn't been started</p>
-                  </div>
-                  <div class="card-body" style="max-height: 500px; overflow-y: auto">
-                      <!-- Nested Child Card -->
-                      <ul id="to-do-task">
-                        {{#each tasks.toDo as |task|}}
-                        <li> {{> task task}} </li>
-                        {{/each}}
-                      </ul>
-                  </div>
-                  <div class="card-footer">
-                      <button type="button" class="btn btn-outline-dark btn-block"><i class="fa-regular fa-square-plus" style="color: #000000;"></i> Add Item</button>
-                  </div>
+      <div class="container">
+        <div class="row" id="task-board">
+          <div class="col" id="to-do">
+            {{!-- Parent Card --}}
+            <div class="container">
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="card-title"><i class="fa-regular fa-circle-down" style="color: #e45656;"></i> To Do</h5>
+                  <p class="card-subtitle">This item hasn't been started</p>
                 </div>
-              </div>                
+                <div class="card-body" style="max-height: 500px; overflow-y: auto">
+                  <!-- Nested Child Card -->
+                  <ul id="to-do-task">
+                    {{#each tasks.toDo as |task|}}
+                    <li> {{> task task}} </li>
+                    {{/each}}
+                  </ul>
+                </div>
+                <div class="card-footer">
+                  <button type="button" class="btn btn-outline-dark btn-block"><i class="fa-regular fa-square-plus"
+                      style="color: #000000;"></i> Add Item</button>
+                </div>
+              </div>
             </div>
+          </div>
 
-            <div class="col" id="in-progress">
-              {{!-- Parent Card --}}
-              <div class="container">
-                <div class="card">
-                  <div class="card-header">
-                    <h5 class="card-title"><i class="fa-solid fa-circle-half-stroke" style="color: #e0cd61;"></i> In Progress</h5>
-                        <p class="card-subtitle">This is actively being worked on</p>
-                  </div>
-                  <div class="card-body" style="max-height: 500px; overflow-y: auto">
-                      <!-- Nested Child Card -->
-                      <ul id="in-progress-task">
-                        {{#each tasks.inProgress as |task|}}
-                        <li> {{> task task}} </li>
-                        {{/each}}
-                      </ul>
-                  </div>
-                  <div class="card-footer">
-                      <button type="button" class="btn btn-outline-dark btn-block"><i class="fa-regular fa-square-plus" style="color: #000000;"></i> Add Item</button>
-                  </div>
+          <div class="col" id="in-progress">
+            {{!-- Parent Card --}}
+            <div class="container">
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="card-title"><i class="fa-solid fa-circle-half-stroke" style="color: #e0cd61;"></i> In
+                    Progress</h5>
+                  <p class="card-subtitle">This is actively being worked on</p>
                 </div>
-              </div>  
+                <div class="card-body" style="max-height: 500px; overflow-y: auto">
+                  <!-- Nested Child Card -->
+                  <ul id="in-progress-task">
+                    {{#each tasks.inProgress as |task|}}
+                    <li> {{> task task}} </li>
+                    {{/each}}
+                  </ul>
+                </div>
+                <div class="card-footer">
+                  <button type="button" class="btn btn-outline-dark btn-block"><i class="fa-regular fa-square-plus"
+                      style="color: #000000;"></i> Add Item</button>
+                </div>
+              </div>
             </div>
+          </div>
 
-            <div class="col" id="completed">
-              {{!-- Parent Card --}}
-              <div class="container">
-                <div class="card">
-                  <div class="card-header">
-                    <h5 class="card-title"><i class="fa-regular fa-circle-check" style="color: #6fb854;"></i> Done</h5>
-                        <p class="card-subtitle">This has been completed</p>
-                  </div>
-                  <div class="card-body" style="max-height: 500px; overflow-y: auto">
-                      <!-- Nested Child Card -->
-                      <ul id="completed-task">
-                        {{#each tasks.completed as |task|}}
-                        <li> {{> task task}} </li>
-                        {{/each}}
-                      </ul>
-                  </div>
-                  <div class="card-footer">
-                      <button type="button" class="btn btn-outline-dark btn-block"><i class="fa-regular fa-square-plus" style="color: #000000;"></i> Add Item</button>
-                  </div>
+          <div class="col" id="completed">
+            {{!-- Parent Card --}}
+            <div class="container">
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="card-title"><i class="fa-regular fa-circle-check" style="color: #6fb854;"></i> Done</h5>
+                  <p class="card-subtitle">This has been completed</p>
                 </div>
-              </div>  
+                <div class="card-body" style="max-height: 500px; overflow-y: auto">
+                  <!-- Nested Child Card -->
+                  <ul id="completed-task">
+                    {{#each tasks.completed as |task|}}
+                    <li> {{> task task}} </li>
+                    {{/each}}
+                  </ul>
+                </div>
+                <div class="card-footer">
+                  <button type="button" class="btn btn-outline-dark btn-block"><i class="fa-regular fa-square-plus"
+                      style="color: #000000;"></i> Add Item</button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-  </div> 
-      <div id="taskDetailModal" class="modal">
-        <div class="modal-content">
-          {{! Fetched task details in here}}
-        </div>
-        <span class="close" onclick="closeModal()">&times;</span>
-      </div>
-<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
-<script src="/js/sortable.js"></script>
-<script src="/js/taskCardModal.js"></script>
+    </div>
+  </div>
+  </div>
+  <div id="taskDetailModal" class="modal">
+    <div class="modal-content">
+      {{! Fetched task details in here}}
+    </div>
+    <span class="close" onclick="closeModal()">&times;</span>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
+  <script src="/js/sortable.js"></script>
+  <script src="/js/taskCardModal.js"></script>
 </body>
 
 {{!-- Translate this into task.handlebars--}}
