--- a/views/partials/sidebar.handlebars
+++ b/views/partials/sidebar.handlebars
@@ -22,21 +22,33 @@
         Home
       </a>
     </li> }}
-    <li>
+    <li class="dropdown">
       <a href="#Users" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="16"><use
             xlink:href="#speedometer2"
           ></use></svg>
         Users
       </a>
+      <div class="dropdown-content">
+          <a href="#">
+            Project</a>
+          <a href="/invite">
+            Invite</a>
+        </div>
     </li>
-    <li>
+    <li class ="dropdown">
       <a href="#Projects" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="16"><use
             xlink:href="#table"
           ></use></svg>
         Projects
       </a>
+      <div class="dropdown-content">
+          <a href="#">
+            Project</a>
+          <a href="/invite">
+            Invite</a>
+        </div>
     </li>
   </ul>
 
