updated temp dropdown info
updated temp dropdown info

--- a/views/partials/sidebar.handlebars
+++ b/views/partials/sidebar.handlebars
@@ -31,9 +31,9 @@
       </a>
       <div class="dropdown-content">
           <a href="#">
-            Project</a>
+            User A</a>
           <a href="/invite">
-            Invite</a>
+            User B</a>
         </div>
     </li>
     <li class ="dropdown">
@@ -45,9 +45,9 @@
       </a>
       <div class="dropdown-content">
           <a href="#">
-            Project</a>
+            Project A</a>
           <a href="/invite">
-            Invite</a>
+            Project B</a>
         </div>
     </li>
   </ul>
