missing closing div that messed up all the show/hide properties for signups lol

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -151,6 +151,7 @@
         </div>
       </form>
   </div>
+  </div>
 
   <!-- Join a workspace -->
   <div class="row justify-content-center hide" id="workplace-join">
@@ -275,7 +276,6 @@
     </div>
   </div>
 </div>
-
 </div>
 
 <script src="/js/signup.js"></script>
