--- a/views/partials/sidebar.handlebars
+++ b/views/partials/sidebar.handlebars
@@ -56,10 +56,8 @@
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
       <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
-  </div>
+  </div> }}
+  
   {{> chat}}
 
 </aside>
-
-{{!
-<script src="/js/sidebar.js"></script> }}
