--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -23,7 +23,7 @@
             style="color: #ffffff;"
           ></i></button>
         <div class="dropdown-content">
-          <a href="#"><i
+          <a href="#" data-toggle="modal" data-target="#project-modal"><i
               class="fa-solid fa-list-check"
               style="color: #000000;"
             ></i>
