--- a/views/partials/projectModal.handlebars
+++ b/views/partials/projectModal.handlebars
@@ -41,7 +41,7 @@
           class="btn btn-secondary"
           data-dismiss="modal"
         >Cancel</button>
-        <button type="button" class="btn btn-primary">Add</button>
+        <button type="button" class="btn btn-dark">Add</button>
       </div>
     </div>
   </div>
